--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+:root {
+  --dark: #fff;
+}
+
 html,
 body {
   padding: 0;
@@ -7,8 +11,12 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #0070f3;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 * {
