Made things a bit more responsive

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -12,3 +12,15 @@
 .heroText {
   margin-left: 2rem;
 }
+
+@media all and (max-width: 44rem) {
+  .heroContainer {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .heroText {
+    margin: 0;
+  }
+}
