--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -3,12 +3,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
+  background-color: var(--bg-main);
+  border: 4px solid var(--primary);
+  position: sticky;
+  z-index: 10;
+  top: 0;
 }
 
 .navMenu {
   display: flex;
   flex-direction: row;
-  list-style: none;
 }
 
 .navMenuItem {
