--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -24,3 +24,18 @@
 .navMenu a:hover {
   color: var(--accent-text);
 }
+
+@media all and (max-width: 34rem) {
+  .header {
+    padding: 0 0.25rem;
+  }
+  .navMenu {
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
+  .navMenu a {
+    margin: 0 0.5rem;
+    font-size: 1rem;
+  }
+}
